<resources>
    <string name="app_name">Homework3</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sports">Sports</string>
    <string name="icon">icon</string>
    <string name="title">Title</string>
    <string name="picture">Picture</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="just_sign_in">* Just sign in</string>
    <string name="android">Android</string>
    <string name="_100_n_posts">100 Posts</string>
    <string name="_1b_followers">1B Followers</string>
    <string name="_1k_following">1K Following</string>
    <string name="username">Alexey Abramovich</string>
    <string name="address_description">Address Description</string>
    <string name="directions">DIRECTIONS</string>
    <string name="call">CALL</string>
    <string name="save">SAVE</string>
    <string name="website">WEBSITE</string>
    <string name="line">line</string>
    <string name="certificated">Certificated</string>
    <string name="layouts">Layouts</string>
</resources>