<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/android"
        android:textColor="@color/black"
        android:textSize="38sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/picture"
            android:src="@drawable/icon1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="3"
            android:gravity="center"
            android:text="@string/_100_n_posts"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="4"
            android:gravity="center"
            android:text="@string/_1b_followers"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:ems="4"
            android:gravity="center"
            android:text="@string/_1k_following"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="5"
        android:text="@string/address_description"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_radio_48" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_favorite_48" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_domain_48" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_book_48" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_directions_bike_48" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_people_48" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/directions"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_directions_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/call"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_call_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_star_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/website"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_insert_link_24" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/line"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:contentDescription="@string/picture"
            android:src="@drawable/icon2" />

        <ImageView
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:contentDescription="@string/picture"
            android:src="@drawable/icon3" />

        <ImageView
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:contentDescription="@string/picture"
            android:src="@drawable/icon4" />
    </LinearLayout>
</LinearLayout>