<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_folder_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/attractions"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_local_dining_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dining"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_school_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/education"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_people_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/family"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_favorite_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/health"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_domain_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/office"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_shopping_cart_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/promotions"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_radio_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/radio"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_book_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/recipes"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_directions_bike_48"/>
        <TextView
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sports"/>
    </TableRow>
</TableLayout>