<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imagePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/picture"
        android:src="@drawable/stalker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_baseline_photo_camera_48"
        app:layout_constraintBottom_toBottomOf="@id/imagePhoto"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/title"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePhoto" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/price"
        android:ems="5"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/location"
        android:drawableEnd="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="110dp"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/description"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPrice" />

    <EditText
        android:id="@+id/etInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/inventory"
        android:ems="5"
        android:hint="@string/inventory"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />

    <EditText
        android:id="@+id/etWe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/weight"
        android:ems="5"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>